[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/stageB/water (1).png" type="Texture" id=1]
[ext_resource path="res://assets/music/thewave-8-loop.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/stageB/stageb-bg.png" type="Texture" id=3]
[ext_resource path="res://assets/font_bulky.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/stageB/wall.png" type="Texture" id=5]
[ext_resource path="res://scenes/scripts/StageB/StageB.gd" type="Script" id=6]
[ext_resource path="res://scenes/entities/StageB/PlayerSurfer.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/scripts/StageB/ParallaxFx.gd" type="Script" id=8]
[ext_resource path="res://scenes/Hud.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/stageB/Untitled-2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="Animation" id=3]
resource_name = "cadi"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/cadillac2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 308, 337 ), Vector2( 304, 340 ), Vector2( 305, 337 ), Vector2( 306, 340 ), Vector2( 304, 336 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/cadillac2:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 576, 327 ), Vector2( 344, 327 ) ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.75, 0.143555, 0.143555, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[node name="StageB" type="Node2D"]
position = Vector2( -25, 2 )
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 8 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 2, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Water" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 0 )

[node name="Wall" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 320, 16 )
texture = ExtResource( 5 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.3, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Wave" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, 26 )
texture = ExtResource( 1 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 176 )
current = true
zoom = Vector2( 0.9, 1 )

[node name="Map" type="Node2D" parent="."]

[node name="Top" type="StaticBody2D" parent="Map"]

[node name="CollisionTop" type="CollisionShape2D" parent="Map/Top"]
position = Vector2( 320, 16 )
shape = SubResource( 1 )

[node name="Bottom" type="StaticBody2D" parent="Map"]

[node name="CollisionBottom" type="CollisionShape2D" parent="Map/Bottom"]
position = Vector2( 320, 328 )
shape = SubResource( 1 )

[node name="Player" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 57, 193 )

[node name="AreaSpawn" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSpawn"]
position = Vector2( 737, 183 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cadi"
anims/cadi = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 569.597, 327 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 773, 32 )

[node name="cadillac2" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 308, 337 )
scale = Vector2( 0.541926, 0.541926 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 32, 773, 161 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 208.0
margin_top = 168.0
margin_right = 448.0
margin_bottom = 195.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "SNAAAAAAKE!"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control"]

[node name="Hud" parent="." instance=ExtResource( 9 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 279, 342 )

[node name="HurtTexture" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -2.0
margin_right = 609.0
margin_bottom = 358.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="_on_grenade_ready" from="Map/Player" to="." method="_on_Player__on_grenade_ready"]
[connection signal="_on_grenade_throw" from="Map/Player" to="." method="_on_Player__on_grenade_throw"]
[connection signal="_on_player_death" from="Map/Player" to="." method="_on_Player__on_player_death"]
[connection signal="_on_shoot" from="Map/Player" to="." method="_on_Player__on_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
